integrating code pen magic

--- a/www/index.html
+++ b/www/index.html
@@ -38,13 +38,21 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/framework7-bundle.min.css">
   <link rel="stylesheet" href="css/styles.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     </head>
     <body>
         
 <!-- https://codepen.io/suez/pen/PwKZwO -->
+<div class="scene">
+    <h1>Discover</h1>
+    <div class="magic"></div>
+    
+  </div>
 
-
-        <script src="cordova.js"></script>
+        <!-- <script src="cordova.js"></script> -->
   <script src="js/framework7-bundle.min.js"></script>
   <script src="js/jquery-3.6.1.min.js"></script>
   <script src="js/scripts.js"></script>
