--- a/www/index.html
+++ b/www/index.html
@@ -46,11 +46,24 @@
     <body>
         
 <!-- https://codepen.io/suez/pen/PwKZwO -->
-<div class="scene">
+<!-- <div class="scene">
     <h1>Discover</h1>
     <div class="magic"></div>
     
-  </div>
+  </div> -->
+  <div class="block">
+        <p><a class="link popover-open" href="#" data-popover=".popover-about">Open About Popover</a></p>
+      </div>
+      <div class="popover popover-about">
+        <div class="popover-inner">
+          <div class="block">
+            <p>About</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac diam ac quam euismod porta vel a
+              nunc.
+              Quisque sodales scelerisque est, at porta justo cursus ac.</p>
+          </div>
+        </div>
+      </div>
 
         <!-- <script src="cordova.js"></script> -->
   <script src="js/framework7-bundle.min.js"></script>
