--- a/www/index.html
+++ b/www/index.html
@@ -38,38 +38,57 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/framework7-bundle.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <title>Discover</title>
 
+  <!-- font -->
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
+
     </head>
     <body>
-        
-<!-- https://codepen.io/suez/pen/PwKZwO -->
-<!-- <div class="scene">
-    <h1>Discover</h1>
-    <div class="magic"></div>
-    
-  </div> -->
+      <!-- basic html for landing page -->
+        <div id ="app">
+          <!-- panel components go here -->
+
   <!-- https://codepen.io/Jeremboo/pen/WwbjvL -->
   <!-- https://www.codefixup.com/zoom-image-on-mouseover-jquery/ -->
 
+<div class="view view-main">
+  <!-- page content goes here -->
 
-  <div class="block">
-        <p><a class="link popover-open" href="#" data-popover=".popover-about">Open About Popover</a></p>
-      </div>
-      <div class="popover popover-about">
-        <div class="popover-inner">
-          <div class="block">
-            <p>About</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac diam ac quam euismod porta vel a
-              nunc.
-              Quisque sodales scelerisque est, at porta justo cursus ac.</p>
-          </div>
-        </div>
-      </div>
+  <!-- bottom tolbar -->
+  <div class="toolbar toolbar-bottom .toolbar-inner">
+    <div class="toolbar-inner">
+    <a href="/" class="link">HOME</a>
+    <a href="/page2/" class="link">PAGE 2</a>
+    <a href="/page3/" class="link">PAGE 3</a>
+    </div>
+</div>
 
-        <!-- <script src="cordova.js"></script> -->
+<div class="home" class="page">
+<!-- component is fixed to the page -->
+
+
+  <div class="page-content">
+    <!-- page content goes here -->
+    <div class="page-content">
+      <div class="title">
+        <!-- <h1>Discover</h1> -->
+      </div>
+      <!-- https://codepen.io/suez/pen/PwKZwO -->
+<div class="scene">
+  <h1>Discover</h1>
+  <div class="magic"></div>
+  
+</div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+  <!-- <script src="cordova.js"></script> -->
   <script src="js/framework7-bundle.min.js"></script>
   <script src="js/jquery-3.6.1.min.js"></script>
   <script src="js/scripts.js"></script>
