--- a/www/index.html
+++ b/www/index.html
@@ -60,9 +60,9 @@
   <!-- bottom tolbar -->
   <div class="toolbar toolbar-bottom .toolbar-inner">
     <div class="toolbar-inner">
-    <a href="/" class="link">HOME</a>
-    <a href="/page2/" class="link">PAGE 2</a>
-    <a href="/page3/" class="link">PAGE 3</a>
+    <a href="/" class="link"><img src="/www/img/mag-icon.png"></a>
+    <a href="/page2/" class="link"><img src="/www/img/turt-icon.png"></a>
+    <a href="/page3/" class="link"><img src="/www/img/fish-icon.png"></a>
     </div>
 </div>
 
@@ -76,9 +76,14 @@
       <div class="title">
         <!-- <h1>Discover</h1> -->
       </div>
+
+
+
+
       <!-- https://codepen.io/suez/pen/PwKZwO -->
+      
 <div class="scene">
-  <h1>Discover</h1>
+  <h1 class="banner">Discover</h1>
   <div class="magic"></div>
   
 </div>
@@ -95,3 +100,16 @@
         
     </body>
 </html>
+
+
+
+<!-- REFERENCES -->
+
+<!-- Photo by <a href="https://unsplash.com/@kmkr?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kris-Mikael Krister</a> on <a href="https://unsplash.com/s/photos/sea-turtle?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+   -->
+
+   <!-- <a href="https://www.flaticon.com/free-icons/turtle" title="turtle icons">Turtle icons created by Freepik - Flaticon</a> -->
+
+   <!-- <a href="https://www.flaticon.com/free-icons/fish" title="fish icons">Fish icons created by Freepik - Flaticon</a> -->
+
+   <!-- <a href="https://www.flaticon.com/free-icons/search" title="search icons">Search icons created by Freepik - Flaticon</a> -->
