--- a/www/index.html
+++ b/www/index.html
@@ -60,9 +60,9 @@
   <!-- bottom tolbar -->
   <div class="toolbar toolbar-bottom .toolbar-inner">
     <div class="toolbar-inner">
-    <a href="/" class="link"><img src="/www/img/mag-icon.png"></a>
-    <a href="/page2/" class="link"><img src="/www/img/turt-icon.png"></a>
-    <a href="/page3/" class="link"><img src="/www/img/fish-icon.png"></a>
+    <a href="/" class="link"><img src="/img/mag-icon.png"></a>
+    <a href="/page2/" class="link"><img src="/img/turt-icon.png"></a>
+    <a href="/page3/" class="link"><img src="/img/fish-icon.png"></a>
     </div>
 </div>
 
