--- a/www/pages/page2.html
+++ b/www/pages/page2.html
@@ -19,7 +19,7 @@
           </div>
         </div>
         </div>
-        <img src="/www/img/turt1.png">
+        <img src="/img/turt1.png">
     
     
     </div>
