trying to fix things but not getting anywhere

--- a/www/pages/page2.html
+++ b/www/pages/page2.html
@@ -19,8 +19,11 @@
           </div>
         </div>
         </div>
-        <img src="/img/turt1.png">
+        <img src="./img/turt1.png" class="turt" id="turt">
+        <img src="./img/bubbles.png" class="bubble" id="bubble">
     
     
     </div>
     </div>
+
+    <!-- <a href="https://www.flaticon.com/free-icons/bubbles" title="bubbles icons">Bubbles icons created by kerismaker - Flaticon</a> -->
