--- a/www/index.html
+++ b/www/index.html
@@ -60,9 +60,9 @@
   <!-- bottom tolbar -->
   <div class="toolbar toolbar-bottom .toolbar-inner">
     <div class="toolbar-inner">
-    <a href="/" class="link"><img src="/img/mag-icon.png"></a>
-    <a href="/page2/" class="link"><img src="/img/turt-icon.png"></a>
-    <a href="/page3/" class="link"><img src="/img/fish-icon.png"></a>
+    <a href="/" class="link"><img src="./img/mag-icon.png"></a>
+    <a href="/page2/" class="link"><img src="./img/turt-icon.png"></a>
+    <a href="/page3/" class="link"><img src="./img/fish-icon.png"></a>
     </div>
 </div>
 
@@ -74,7 +74,7 @@
     <!-- page content goes here -->
     <div class="page-content">
       <div class="title">
-        <!-- <h1>Discover</h1> -->
+        <h1>Discover</h1>
       </div>
 
 
@@ -83,7 +83,7 @@
       <!-- https://codepen.io/suez/pen/PwKZwO -->
       
 <div class="scene">
-  <h1 class="banner">Discover</h1>
+  <!-- <h1 class="banner">Discover</h1> -->
   <div class="magic"></div>
   
 </div>
