--- a/www/pages/page2.html
+++ b/www/pages/page2.html
@@ -5,7 +5,10 @@
 
       <div class="block flex">
         <div>
-        <p><a class="link popover-open" href="#" data-popover=".popover-about" >SEA TURTLES</a></p>
+          <h1>SEA TURTLES</h1>
+        </div>
+        <div>
+        <p><a class="link popover-open" href="#" data-popover=".popover-about" ><img src="./img/turt1.png" id="turt"></a></p>
       </div>
       <div class="popover popover-about">
         <div class="popover-inner">
@@ -18,14 +21,14 @@
         </div>
       </div>
         <div>
-        <img src="./img/turt1.png" >
         <img src="./img/bubbles.png" class="bubble" id="bubble">
         </div>
 
-        <h1 id="turt">bubbles</h1>
+        <h1>bubbles</h1>
 
     
-    
+
+
     </div>
     </div>
 
