--- a/www/index.html
+++ b/www/index.html
@@ -171,9 +171,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <div class="view view-main">
 
   <!-- bottom tolbar -->
-  <div class="toolbar toolbar-bottom .toolbar-inner">
+  <div class="toolbar toolbar-bottom">
     <div class="toolbar-inner">
-    <a href="/" class="link"><img src="./img/mag-icon.png"></a>
+    <a href="/page1/" class="link"><img src="./img/mag-icon.png"></a>
     <a href="/page2/" class="link"><img src="./img/turt-icon.png"></a>
     <a href="/page3/" class="link"><img src="./img/fish-icon.png"></a>
     </div>
@@ -191,7 +191,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   </div>
 </div>
 
-<div class="home" class="page">
+<div data-name="home" class="page">
 <!-- component is fixed to the page -->
 
 
