added left panel

--- a/www/pages/page2.html
+++ b/www/pages/page2.html
@@ -14,7 +14,7 @@
         </div>
 
         <div>
-          <p><a class="link popover-open" href="#" data-popover=".popover-about" ><img src="./img/turt1.png" id="turt1"></a></p>
+          <p id="turt1"><a class="link popover-open" href="#" data-popover=".popover-about" ><img src="./img/turt1.png" ></a></p>
         </div>
         <div class="popover popover-about">
           <div class="popover-inner">
