--- a/www/pages/page3.html
+++ b/www/pages/page3.html
@@ -5,7 +5,7 @@
       <div class="block flex">
         
         <div>
-        <p><a class="link popover-open" href="#" data-popover=".popover-about" ><img src="./img/yellow-fish.png" ></a></p>
+        <p id="yellow"><a class="link popover-open" href="#" data-popover=".popover-about" ><img src="./img/yellow-fish.png" ></a></p>
       </div>
       <div class="popover popover-about">
         <div class="popover-inner">
@@ -18,7 +18,7 @@
         </div>
 
         <div>
-          <p><a class="link popover-open" href="#" data-popover=".popover-about" ><img src="./img/angel.png" ></a></p>
+          <p id="angel"><a class="link popover-open" href="#" data-popover=".popover-about" ><img src="./img/angel.png" ></a></p>
         </div>
         <div class="popover popover-about">
           <div class="popover-inner">
@@ -30,8 +30,13 @@
           </div>
           </div>
 
+          <div id="clown"><img src="./img/clown.png"></div>
+
+          <div id="neon"><img src="./img/neon.png"></div>
+
+
           <div>
-            <p><a class="link popover-open" href="#" data-popover=".popover-about" ><img src="./img/bubble-fish.png"></a></p>
+            <p id="bubble"><a class="link popover-open" href="#" data-popover=".popover-about" ><img src="./img/bubble-fish.png"></a></p>
           </div>
           <div class="popover popover-about">
             <div class="popover-inner">
